--- a/package.json
+++ b/package.json
@@ -14,12 +14,14 @@
     "@react-three/drei": "9.80.0",
     "@react-three/fiber": "8.13.0",
     "@types/matter-js": "^0.19.8",
+    "@types/three": "^0.175.0",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.18.2",
     "gsap": "^3.12.7",
     "lucide-react": "^0.487.0",
     "matter-js": "^0.20.0",
+    "motion": "^12.7.3",
     "next": "15.3.0",
     "next-themes": "^0.4.6",
     "ogl": "^1.0.11",
